force-app/main/default/objects/Project_Closeout__c/Project_Closeout__c.object-meta.xml
<CustomObject>
    <label>Project Closeout</label>
    <nameField>
        <label>Project Closeout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Closeouts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>