force-app/main/default/objects/Project_Closeout__c/fields/Benefit_2__c.field-meta.xml
<CustomField>
    <fullName>Benefit_2__c</fullName>
    <label>Benefit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Cycle time</fullName>
            </value>
            <value>
                <fullName>EBIDTA</fullName>
            </value>
            <value>
                <fullName>Working capital</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>