force-app/main/default/objects/Project_Closeout__c/fields/Benefit_amount_1__c.field-meta.xml
<CustomField>
    <fullName>Benefit_amount_1__c</fullName>
    <label>Amount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>