force-app/main/default/objects/Project_Closeout__c/fields/Benefits__c.field-meta.xml
<CustomField>
    <fullName>Benefits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Benefits</label>
    <type>Checkbox</type>
</CustomField>