force-app/main/default/objects/Project_Closeout__c/fields/Bio__c.field-meta.xml
<CustomField>
    <fullName>Bio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bio</label>
    <type>Checkbox</type>
</CustomField>