force-app/main/default/objects/Project_Closeout__c/fields/Bio_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Bio_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bio Line Item</label>
    <referenceTo>Consultant_Bio_Project_Item__c</referenceTo>
    <relationshipLabel>Project Closeouts</relationshipLabel>
    <relationshipName>Project_Closeouts</relationshipName>
    <type>Lookup</type>
</CustomField>