force-app/main/default/objects/Project_Closeout__c/fields/Case_Study__c.field-meta.xml
<CustomField>
    <fullName>Case_Study__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Study</label>
    <type>Checkbox</type>
</CustomField>