force-app/main/default/objects/Project_Closeout__c/fields/NPS_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>NPS_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NPS Scheduled</label>
    <type>Checkbox</type>
</CustomField>