force-app/main/default/objects/Project_Closeout__c/fields/Other_Benefit_Type1__c.field-meta.xml
<CustomField>
    <fullName>Other_Benefit_Type1__c</fullName>
    <label>Benefit Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>