force-app/main/default/objects/Project_Closeout__c/fields/PH_Complete__c.field-meta.xml
<CustomField>
    <fullName>PH_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PH Complete</label>
    <type>Checkbox</type>
</CustomField>