force-app/main/default/objects/Project_Closeout__c/fields/Project_Benefit_multiselect__c.field-meta.xml
<CustomField>
    <fullName>Project_Benefit_multiselect__c</fullName>
    <label>Project Benefit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>