force-app/main/default/objects/Project_Closeout__c/fields/Project_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Project_Benefits__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>