force-app/main/default/objects/Project_Closeout__c/fields/Submit__c.field-meta.xml
<CustomField>
    <fullName>Submit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit</label>
    <type>Checkbox</type>
</CustomField>