force-app/main/default/objects/Project_Closeout__c/fields/View_Link__c.field-meta.xml
<CustomField>
    <fullName>View_Link__c</fullName>
    <label>Case Study</label>
    <type>Url</type>
</CustomField>