force-app/main/default/objects/Project_Closeout__c/validationRules/BenefitType3_Required_if_Other_choosed.validationRule-meta.xml
<ValidationRule>
    <fullName>BenefitType3_Required_if_Other_choosed</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL(Benefit_3__c, &quot;Other&quot;)&amp;&amp;  ISBLANK(Other_Benefit_Type3__c),true,false)</errorConditionFormula>
    <errorDisplayField>Other_Benefit_Type3__c</errorDisplayField>
    <errorMessage>Please Enter Benefit Type here as Other is Selected.</errorMessage>
</ValidationRule>